fixed tooltip z-index

--- a/styles/category.css
+++ b/styles/category.css
@@ -9,7 +9,7 @@
     top: 55px;
     left: 72px;
     width: 100%;
-    z-index: 100;
+    z-index: 50;
     padding-top: 8px;
     padding-left: 18px;
 }
